# demo-ai-crud

./: .env.example  .gitignore  STRUCTURE.md  server.sh  start.sh
backend/: database.py  main.py  models.py  pyproject.toml  skill_framework.py
backend/skills/: product_skill.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AIChat.js  ApiCallResult.js  DateRangePicker.js  HITLWidget.js  ProductList.js  Sidebar.js
skills/product-create/: SKILL.md
skills/product-crud/: SKILL.md
skills/product-crud/references/: categories.md
skills/product-delete/: SKILL.md
skills/product-query/: SKILL.md
skills/product-update/: SKILL.md
