[project]
name = "demo-ai-crud-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "agentskills-core>=0.2.3",
    "agentskills-fs>=0.2.3",
    "pyyaml>=6.0",
]
